--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-size: 62.5%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calci {
+	border: 10px solid black;
+	background-color: #000000;
+	padding: 1rem 3rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+	color: #fff;
+	text-align: end;
+	font-size: 2rem;
+	background-color: #141E27;
+	outline: none;
+	border: none;
+	padding: 2rem 3rem;
+	width: 100%;
+	margin-bottom: 1rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+span{
+  color: #fff;
+cursor: pointer;
+  font-weight: bold;
+  font-size: 2rem;
+  
+  
+  
+}
+label {
+	font-size: 2rem;
+	width: 100%;
+	background-color: #141E27;
+	color: white;
+	padding: 2rem 3rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+	width: 50%;
+	font-weight: bold;
+	background-color: #000000;
+	color: white;
+	font-size: 2rem;
+	padding: 1.5rem 4rem;
+	border: none;
+	cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.col-lg-6 button {
+	width: 100%;
+}
+
+button:active {
+	transition: all 0.5s;
+	transform: scale(1.1);
+	background-color: rgba(255, 255, 255, 0.501) !important;
+}
+
+#clear, #backspace , .opr{
+  background-color: #1f1d36 !important;
+}
+
+@media screen and (max-width:1290px) {
+  .calci{
+    padding: 1rem 0;
   }
 }
+
+@media screen and (max-width:768px) {
+  .keypad{
+    width: 67% !important;
+  }
+  
+  
+}
+
+@media screen and (max-width:580px) {
+  .keypad{
+    width: 70% !important;
+  }
+  
+}
+  @media screen and (max-width:540px) {
+    .keypad{
+      width: 75% !important;
+    }
+    
+    
+  }
+  @media screen and (max-width:490px) and (min-width:300px) {
+    .keypad{
+      width: 95% !important;
+    }
+    button{
+      width: 30%;
+    }
+    
+    
+  }
+
+
